--- a/estilos/style.css
+++ b/estilos/style.css
@@ -160,3 +160,9 @@ main {
 .main_trabajo_caja ul{
     list-style: none;
 }
+
+footer{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
