--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,6 +20,7 @@ body {
     background-color: #000F46;
     text-align: center;
     padding: 20px;
+    
 }
 
 .main_header_nav ul {
@@ -39,7 +40,7 @@ body {
     padding: 18px;
     margin-top: 30px;
     margin-bottom: 31px;
-    margin-right: 80px;
+    margin-right: 30px;
     border-radius: 167px;
 
 }
@@ -168,14 +169,38 @@ footer{
 }
 
 @media(max-width:550px){
-    footer{
-        
-
-    }
     .main_header_nav ul{
         flex-direction: column;
+        align-items: center;
+    }
+    .main_header_nav_boton{
+        background-color: #CACACA;
+        width: 270px;
+        padding: 15px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        border-radius: 167px;
     }
     .main_presentacion_caja{
+        display: flex;
+        flex-direction: column-reverse;
+        
+    }
+    .main_estudios_caja{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .main_conocimientos_caja{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+
+    .main_competencia_caja{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .main_trabajo_caja{
         display: flex;
         flex-direction: column-reverse;
     }
