--- a/estilos/style.css
+++ b/estilos/style.css
@@ -170,16 +170,12 @@ footer{
 
 @media(max-width:550px){
     .main_header_nav ul{
-        flex-direction: column;
-        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
     }
     .main_header_nav_boton{
         background-color: #CACACA;
-        width: 270px;
-        padding: 15px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        border-radius: 167px;
+        width: 8em;
     }
     .main_presentacion_caja{
         display: flex;
