--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,7 +15,37 @@ body {
     font-size: 150%;
     background-color: #ffffff;
 }
-
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.header-borroso{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    filter: blur(5px); 
+}
+.main-borroso{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    filter: blur(5px); 
+}
+.footer-borroso{
+    bottom: 0px;
+    width: 100%;
+    position: fixed;
+    filter: blur(5px); 
+}
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.centrar-js{
+    text-align: center;
+}
 /*Inicio pagina Datos personales*/
 .main_header {
     background-color: #2442b3;
